2002-10-05  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-object.c (sp_object_invoke_release): new frontend
	(sp_object_detach): release object
	(sp_object_detach_unref): Ditto

	* src/sp-object.h: Added ::release virtual method

	* src/sp-object.c (sp_object_invoke_shutdown): New method

2002-10-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-item-group.c (sp_item_group_ungroup): Rewrite it, so it moves
	all non-items to main <defs> node, preserving logical order and building
	objects in correct sequence

	* src/desktop-affine.c: Methods for root coordinate system, fixes misplacement bug

	* src/libnrtype/nr-rasterfont.c: Made working

	* src/libnrtype/nr-font.c (nr_font_new_default): Do linking
	(nr_font_unref): Ditto

	* src/libnrtype/nr-type-directory.c (nr_typeface_unref): Moved here, implemented list

	* src/display/nr-arena-glyphs.c (nr_arena_glyphs_update): Port to rfont
	(nr_arena_glyphs_pick): Ditto (placeholder)
	(nr_arena_glyphs_set_path): Ditto
	(nr_arena_glyphs_fill_mask): Ditto

	* src/libnr/nr-matrix.h (NR_MATRIX_DF_EXPANSION): New macro
	(NR_MATRIX_DF_EXPANSION2): Ditto

2002-10-03  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c (sp_text_set_shape): Make document insensitive temporarily

	* src/text-context.c (sp_text_context_root_handler): Allow entering
	unicode mode by Ctrl-u

2002-10-02  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-chars.c (sp_chars_add_element): Signature change
	(sp_chars_show): Ditto

	* src/display/nr-arena-glyphs.c (nr_arena_glyphs_group_add_component): Signature change

	* src/libnrtype/nr-rasterfont.c (nr_rasterfont_new): Set it up
	(nr_rasterfont_unref): Release glyph slots
	(nr_rasterfont_render_glyph_mask): Implement
	(nr_rasterfont_ensure_glyph_slot): New helper

	* src/sp-text.c: Port to new chars signature

	* src/sp-chars.h: Use font instead of typeface

	* src/libnr/nr-gradient.c (nr_lgradient_render_block): Signature change
	(nr_lgradient_renderer_setup): Use generic base class