@@ -258,8 +258,10 @@ nr_lgradient_render_generic (NRLGradientRenderer *lgr, NRPixBlock *pb)
 
 /* Radial */
 
-static void nr_rgradient_render_block (NRRenderer *r, NRPixBlock *pb, NRPixBlock *m);
+static void nr_rgradient_render_block_symmetric (NRRenderer *r, NRPixBlock *pb, NRPixBlock *m);
+static void nr_rgradient_render_block_optimized (NRRenderer *r, NRPixBlock *pb, NRPixBlock *m);
 static void nr_rgradient_render_generic (NRRGradientRenderer *rgr, NRPixBlock *pb);
+static void nr_rgradient_render_generic_optimized (NRRGradientRenderer *rgr, NRPixBlock *pb);
 
 NRRenderer *
 nr_rgradient_renderer_setup (NRRGradientRenderer *rgr,
@@ -270,24 +272,50 @@ nr_rgradient_renderer_setup (NRRGradientRenderer *rgr,
 			     float fx, float fy,
 			     float r)
 {
-	rgr->renderer.render = nr_rgradient_render_block;
+	if (NR_DF_TEST_CLOSE (cx, fx, NR_EPSILON_F) &&
+	    NR_DF_TEST_CLOSE (cy, fy, NR_EPSILON_F)) {
+		rgr->renderer.render = nr_rgradient_render_block_symmetric;
 
-	rgr->vector = cv;
-	rgr->spread = spread;
+		rgr->vector = cv;
+		rgr->spread = spread;
 
-	nr_matrix_f_invert (&rgr->px2gs, gs2px);
+		nr_matrix_f_invert (&rgr->px2gs, gs2px);
 
-	rgr->cx = cx;
-	rgr->cy = cy;
-	rgr->fx = fx;
-	rgr->fy = fy;
-	rgr->r = r;
+		rgr->cx = cx;
+		rgr->cy = cy;
+		rgr->fx = fx;
+		rgr->fy = fy;
+		rgr->r = r;
+	} else {
+		NRMatrixF n2gs, n2px;
+
+		rgr->renderer.render = nr_rgradient_render_block_optimized;
+
+		rgr->vector = cv;
+		rgr->spread = spread;
+
+		n2gs.c[0] = cx - fx;
+		n2gs.c[1] = cy - fy;
+		n2gs.c[2] = cy - fy;
+		n2gs.c[3] = fx - cx;
+		n2gs.c[4] = fx;
+		n2gs.c[5] = fy;
+
+		nr_matrix_multiply_fff (&n2px, &n2gs, gs2px);
+		nr_matrix_f_invert (&rgr->px2gs, &n2px);
+
+		rgr->cx = 1.0;
+		rgr->cy = 0.0;
+		rgr->fx = 0.0;
+		rgr->fy = 0.0;
+		rgr->r = r / hypot (fx - cx, fy - cy);
+	}
 
 	return (NRRenderer *) rgr;
 }
 
 static void
-nr_rgradient_render_block (NRRenderer *r, NRPixBlock *pb, NRPixBlock *m)
+nr_rgradient_render_block_symmetric (NRRenderer *r, NRPixBlock *pb, NRPixBlock *m)
 {
 	NRRGradientRenderer *rgr;
 	int width, height;
@@ -298,6 +326,20 @@ nr_rgradient_render_block (NRRenderer *r, NRPixBlock *pb, NRPixBlock *m)
 	height = pb->area.y1 - pb->area.y0;
 
 	nr_rgradient_render_generic (rgr, pb);
+}
+
+static void
+nr_rgradient_render_block_optimized (NRRenderer *r, NRPixBlock *pb, NRPixBlock *m)
+{
+	NRRGradientRenderer *rgr;
+	int width, height;
+
+	rgr = (NRRGradientRenderer *) r;
+
+	width = pb->area.x1 - pb->area.x0;
+	height = pb->area.y1 - pb->area.y0;
+
+	nr_rgradient_render_generic_optimized (rgr, pb);
 }
 
 static void
@@ -426,3 +468,108 @@ nr_rgradient_render_generic (NRRGradientRenderer *rgr, NRPixBlock *pb)
 
 	nr_pixblock_release (&spb);
 }
+
+static void
+nr_rgradient_render_generic_optimized (NRRGradientRenderer *rgr, NRPixBlock *pb)
+{
+	int x, y;
+	unsigned char *d;
+	const unsigned char *s;
+	int idx;
+	int bpp;
+	NRPixBlock spb;
+	int x0, y0, width, height, rs;
+
+	x0 = pb->area.x0;
+	y0 = pb->area.y0;
+	width = pb->area.x1 - pb->area.x0;
+	height = pb->area.y1 - pb->area.y0;
+	rs = pb->rs;
+
+	nr_pixblock_setup_extern (&spb, NR_PIXBLOCK_MODE_R8G8B8A8N, 0, 0, NR_GRADIENT_VECTOR_LENGTH, 1,
+				  (unsigned char *) rgr->vector,
+				  4 * NR_GRADIENT_VECTOR_LENGTH,
+				  0, 0);
+	bpp = (pb->mode == NR_PIXBLOCK_MODE_A8) ? 1 : (pb->mode == NR_PIXBLOCK_MODE_R8G8B8) ? 3 : 4;
+
+	for (y = 0; y < height; y++) {
+		d = NR_PIXBLOCK_PX (pb) + y * rs;
+		for (x = 0; x < width; x++) {
+			double gx, gy;
+			double r, pos;
+			double D, A, C;
+
+			/*
+			 * cx = 1.0
+			 * cy = 0.0
+			 * fx = 0.0
+			 * fy = 0.0
+			 *
+			 */
+
+			gx = rgr->px2gs.c[0] * (x + x0) + rgr->px2gs.c[2] * (y + y0) + rgr->px2gs.c[4];
+			gy = rgr->px2gs.c[1] * (x + x0) + rgr->px2gs.c[3] * (y + y0) + rgr->px2gs.c[5];
+
+				/*
+				 * (1)  (gx - fx) * (Py - fy) = (gy - fy) * (Px - fx)
+				 * (2)  (Px - cx) * (Px - cx) + (Py - cy) * (Py - cy) = r * r
+				 *
+				 * (3)   Py = (Px - fx) * (gy - fy) / (gx - fx) + fy
+				 * (4)  (gy - fy) / (gx - fx) = D
+				 * (5)   Py = D * Px - D * fx + fy
+				 *
+				 * (6)   D * fx - fy + cy = N
+				 * (7)   Px * Px - 2 * Px * cx + cx * cx + (D * Px) * (D * Px) - 2 * (D * Px) * N + N * N = r * r
+				 * (8)  (D * D + 1) * (Px * Px) - 2 * (cx + D * N) * Px + cx * cx + N * N = r * r
+				 *
+				 * (9)   A = D * D + 1
+				 * (10)  B = -2 * (cx + D * N)
+				 * (11)  C = cx * cx + N * N - r * r
+				 *
+				 * (12)  Px = (-B +- SQRT (B * B - 4 * A * C)) / 2 * A
+				 */
+
+			r = MAX (rgr->r, 1e-9);
+
+			if (NR_DF_TEST_CLOSE (gx, 0.0, NR_EPSILON_D)) {
+				gx = 0.0 + NR_EPSILON_D;
+			}
+
+			D = gy / gx;
+			A = D * D + 1;
+			C = 1.0 - r * r;
+			if (NR_DF_TEST_CLOSE (A, 0.0, NR_EPSILON_D)) {
+				pos = 0.0;
+			} else {
+				double q;
+				q = 4 * (1 - A * C);
+				if (q < 0.0) {
+					pos = 0.0;
+				} else {
+					double px;
+					if (gx < 0.0) {
+						px = (2 - sqrt (q)) / (2 * A);
+					} else {
+						px = (2 + sqrt (q)) / (2 * A);
+					}
+					pos = gx / px * NR_GRADIENT_VECTOR_LENGTH;
+				}
+			}
+
+			if (rgr->spread == NR_GRADIENT_SPREAD_REFLECT) {
+				idx = ((int) pos) & (2 * NR_GRADIENT_VECTOR_LENGTH - 1);
+				if (idx & NR_GRADIENT_VECTOR_LENGTH) idx = (2 * NR_GRADIENT_VECTOR_LENGTH) - idx;
+			} else if (rgr->spread == NR_GRADIENT_SPREAD_REPEAT) {
+				idx = ((int) pos) & (NR_GRADIENT_VECTOR_LENGTH - 1);
+			} else {
+				idx = CLAMP (((int) pos), 0, (NR_GRADIENT_VECTOR_LENGTH - 1));
+			}
+			s = rgr->vector + 4 * idx;
+			nr_compose_pixblock_pixblock_pixel (pb, d, &spb, s);
+			d += bpp;
+		}
+	}
+
+	nr_pixblock_release (&spb);
+}
+
